--- a/src/global-components/posts/posts.styles.scss
+++ b/src/global-components/posts/posts.styles.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 2.6rem;
     max-width: 654px;
+    margin-bottom: 2rem;
 
     @media screen and (max-width: 1050px) {
         max-width: 834px;
