--- a/src/global-components/side-nav/side-nav.styles.scss
+++ b/src/global-components/side-nav/side-nav.styles.scss
@@ -5,6 +5,7 @@
     min-height: calc(100dvh - 77px);
     max-height: calc(100dvh - 77px);
     overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
